# Atlas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: ci.yml
benchmarks/: benchmark_main.cpp
examples/: example_main.cpp
src/: atlas.hpp
src/core/: matrix4x4.hpp  quaternion.hpp  transform.hpp  vec2.hpp  vec3.cpp  vec3.hpp
src/physics/cloth/: cloth.cpp  cloth.hpp
src/physics/constraints/: constraints.cpp  constraints.hpp
src/physics/fluid/: navier_stokes.cpp  navier_stokes.hpp  sph_solver.cpp  sph_solver.hpp
src/physics/hair/: hair.cpp  hair.hpp
src/physics/raycasting/: raycasting.cpp  raycasting.hpp
src/physics/rigid_body/: rigid_body.cpp  rigid_body.hpp  rigid_body_world.cpp  rigid_body_world.hpp
src/physics/soft_body/: soft_body.cpp  soft_body.hpp
src/physics/terrain/: terrain.cpp  terrain.hpp
tests/: test_collision.cpp  test_core.cpp  test_rigid_body.cpp  test_soft_body.cpp
